<!--
  ~ Copyright (c) 2016 Yohann MERIENNE
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_ref">com.cortocamino.multasdetransito</string>
    <string name="app_name">Multas De Transito</string>

    <string-array name="look_for_array">
        <item>Cédula</item>
        <item>Placa</item>
    </string-array>

    //cedula values:
    <string name="default_cedula_nb">0000000000</string>
    <string name="key_cedula_saved">keyCedula</string>
    <string name="key_cedula_valid">keyCedulaValid</string>

    //id persona values:
    <string name="default_id_persona">0000000</string>
    <string name="previous_id_persona">id_persona=</string>
    <string name="key_id_persona_validated">keyIdPersonaValidated</string>
    <string name="key_id_persona">keyIdPersona</string>

    //placa values:
    <string name="default_placa_nb1">ABC</string>
    <string name="default_placa_nb2">1234</string>
    <string name="key_placa_nb1_saved">ABC</string>
    <string name="key_placa_nb2_saved">1234</string>
    <string name="key_placa_valid"></string>

    //multas values:
    <string name="devise">$</string>
    <string name="default_total_multas">\??.?? </string>
    <string name="total_multas">total multas: </string>
    <string name="key_total_multas_cedula">keyTotalMultaCed</string>
    <string name="key_total_multas_placa">keyTotalMultaPla</string>
    <string name="key_last_total">lastTotal</string>
    <string name="key_full_link_to_xjson_multas_list">keyLinkMultas</string>

    //update time:
    <string name="default_update_time"> 00/00/0000</string>

    //links values:
    <string name="link_to_gov">http://sistemaunico.ant.gob.ec:6033/PortalWEB/paginas/clientes/clp_criterio_consulta.jsp</string>
    <string name="link_to_multas_page_list" tools:ignore="all">http://sistemaunico.ant.gob.ec:6033/PortalWEB/paginas/clientes/clp_grid_citaciones.jsp?ps_tipo_identificacion=%1$s&amp;ps_identificacion=%2$s&amp;ps_placa=%3$s</string>
    <string name="link_to_xjson_multas_list" tools:ignore="all">http://sistemaunico.ant.gob.ec:6033/PortalWEB/paginas/clientes/clp_json_citaciones.jsp?ps_opcion=%1$s&amp;ps_id_contrato=%2$s&amp;ps_id_persona=%3$s&amp;ps_placa=%4$s&amp;ps_identificacion=%5$s&amp;ps_tipo_identificacion=%6$s&amp;_search=false&amp;nd=%7$s&amp;rows=50&amp;page=1&amp;sidx=fecha_emision&amp;sord=desc</string>

    //states keys:
    <string name="key_last_update_cedula_time">keyLastUpdateCedTime</string>
    <string name="key_last_update_placa_time">keyLastUpdatePlaTime</string>
    <string name="key_activity_on">activityState</string>
    <string name="key_no_network">noNetwork</string>

    //alarms:
    <string name="key_alarm_interval">alarmInterval</string>
    <string name="key_default_alarm_interval">defaultAlarmInterval</string>

    //messages:
    <string name="no_internet_connection">No hay conexión a internet</string>
    <string name="no_server_connection">El servidor no esta accessible</string>
    <string name="msg_validating_cedula">Confirmando su numero de cedula</string>
    <string name="msg_cedula_not_valid">Su numero de cédula no esta reconocida</string>
    <string name="msg_placa_not_valid">Su numero de placa no esta reconocida</string>
    <string name="msg_multas_not_accessible">No hay acceso al servidor</string>
    <string name="msg_json_not_valid">respuesta del servidor not valido</string>
    <string name="done">Done</string>

    //others:
    <string name="last_update">ultima actualización: </string>
    <string name="update">actualizar</string>
    <string name="valid">OK</string>  //\u23CE
    <string name="link_to_gov_txt">sitio web oficial</string>

    //licence:
    <string name="EULA_title">Acuerdo de Licencia con el Usuario Final</string>
    <string name="MIT_licence">
        Copyright © 2016 Yohann MERIENNE
        \n\n
        Se concede permiso por la presente, de forma gratuita, a cualquier persona que obtenga una copia de este software y de los archivos de documentación asociados (el "Software"), para utilizar el Software sin restricción, incluyendo sin limitación los derechos de usar, copiar, modificar, fusionar, publicar, distribuir, sublicenciar, y/o vender copias de este Software, y para permitir a las personas a las que se les proporcione el Software a hacer lo mismo, sujeto a las siguientes condiciones:
        \n\n
        El aviso de copyright anterior y este aviso de permiso se incluirán en todas las copias o partes sustanciales del Software.
        \n\n
        EL SOFTWARE SE PROPORCIONA "TAL CUAL", SIN GARANTÍA DE NINGÚN TIPO, EXPRESA O IMPLÍCITA, INCLUYENDO PERO NO LIMITADO A GARANTÍAS DE COMERCIALIZACIÓN, IDONEIDAD PARA UN PROPÓSITO PARTICULAR Y NO INFRACCIÓN. EN NINGÚN CASO LOS AUTORES O TITULARES DEL COPYRIGHT SERÁN RESPONSABLES DE NINGUNA RECLAMACIÓN, DAÑOS U OTRAS RESPONSABILIDADES, YA SEA EN UN LITIGIO, AGRAVIO O DE OTRO MODO, QUE SURJA DE O EN CONEXIÓN CON EL SOFTWARE O EL USO U OTRO TIPO DE ACCIONES EN EL SOFTWARE.  </string>
    \n\n
    <string name="licence_question_validation">Al usar este programa, usted aprueba las condiciones de uso descrito en la licencia más arriba.</string>
    <string name="licence_ok">Aprobó</string>
    <string name="licence_refuse">Salir</string>
    <string name="key_EULA_accepted">isEulaAccepted</string>
</resources>
