<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.cortocamino.yoh.multasdetransito.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ask_cedula_nb"
            android:paddingTop="20dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/cedulaNb"
                android:numeric="integer"
                android:maxLength="10"
                android:hint="@string/default_cedula_nb"
                android:textIsSelectable="true"
                android:textSize="50sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/button"
                android:text="@string/valid"
                android:onClick="saveCedula"
                android:textSize="30sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/info1"
            android:textColor="@color/red"
            android:minLines="2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/total_multas"
                android:id="@+id/textView2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_total_multas"
                android:id="@+id/total_multas_value"
                android:paddingLeft="10dp"
                android:textIsSelectable="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/devise"
                android:id="@+id/textView3"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:text="@string/last_update"
                android:id="@+id/textView4"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/date_update"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:text="@string/update"
                android:id="@+id/btn_refresh"
                android:layout_gravity="center"
                android:onClick="refresh"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/debug_id_persona"
                android:layout_gravity="right|bottom"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/link_to_gov_txt"
            android:id="@+id/textView5"
            android:autoLink="web"
            android:layout_weight="0"
            android:clickable="false"
            android:linksClickable="true"
            android:onClick="goToGovWebSite"/>

    </LinearLayout>
</RelativeLayout>
